--- a/menu.html
+++ b/menu.html
@@ -4,7 +4,7 @@
 <link rel="stylesheet" type="text/css" href="css/style.css">
 <body bgcolor='yellow'>
 <header>
-<h1>MENU</h1>
+<h1>ORDER MENU</h1>
 </div>
 <form action="order.html">
 <table style="width:25%">
