--- a/order.html
+++ b/order.html
@@ -3,8 +3,11 @@
 <body bgcolor='yellow'>
 <link rel="stylesheet" type="text/css" href="css/style.css">
 <div class="title" align="center">
-<h2> YOUR ORDER IS PLACED ! </h2>
-<h3> WILL BE DELIVERED SHORTLY, THANK YOU ! </h3>
+<head>
+<title> YOUR ORDER HAS BEEN PLACED</title>
+<h3> WILL BE DELIVERED SHORTLY</h3>
+<h3>STAY SAFE AND LIVE HEALTHY </h3>
+</head>
 <form action="home.html">
 <input type="submit" value="HOME">
 </div>
