--- a/order.html
+++ b/order.html
@@ -4,7 +4,7 @@
 <link rel="stylesheet" type="text/css" href="css/style.css">
 <div class="title" align="center">
 <head>
-<title> YOUR ORDER HAS BEEN PLACED</title>
+<h1> YOUR ORDER HAS BEEN PLACED</h1>
 <h3> WILL BE DELIVERED SHORTLY</h3>
 <h3>STAY SAFE AND LIVE HEALTHY </h3>
 </head>
