--- a/home.html
+++ b/home.html
@@ -13,7 +13,7 @@
     </div>
     <div class="title" align="center">
     <h1> PHARMA </h1>
-<img src="D:\git\WT\pharmacy-logo-eco-green-cross-260nw-551634217.jpg" width=200 height=200 alt="abcd"/>
+<img src="https://github.com/Augustas-Nixon/pharma.github.io/blob/main/pharmacy-logo-eco-green-cross-260nw-551634217.jpg" width=200 height=200 alt="abcd"/>
     <h2> An online Platform for booking medicine  </h2>
 
     </div>
