--- a/menu.html
+++ b/menu.html
@@ -9,7 +9,7 @@
 <table style="width:25%">
 
   <tr>
-    <th>MEDICINES</th>
+    <th><h3>MEDICINES</h3></th>
     <th>RATE</th>
     <th>mg</th>
     <th>QUANTITY</th>
