--- a/menu.html
+++ b/menu.html
@@ -9,10 +9,10 @@
 <table style="width:25%">
 
   <tr>
-    <th><h3>MEDICINES</h3></th>
-    <th>RATE</th>
-    <th>mg</th>
-    <th>QUANTITY</th>
+    <th><h2>MEDICINES</h2></th>
+    <th><h2>RATE</h2></th>
+    <th><h2>mg</h2></th>
+    <th><h2>QUANTITY</h2></th>
   </tr>
   <tr>
     <td><input type="checkbox" name="name1" /> CALPOL </td>
